# wayflow

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt  VERSION  _installation_tools.sh  clean-install-dev.sh  genindex.html  index.html  install-all-dev.sh  objects.inv  pyproject.toml  requirements-dev.txt  run_native_tool_calling_benchmarks.sh  search.html  searchindex.js  switcher.json
wayflowcore/: AGENTS.md  MANIFEST.in  README.md  install-dev.sh  install.sh  nosec_ignore.csv  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
wayflowcore/constraints/: constraints.txt  constraints_dev.txt
wayflowcore/dev_scripts/openai-models-gen/: generate_apis.sh  generate_models.py  generate_pydantic_models.py  verify_openapi_spec.py
wayflowcore/src/wayflowcore/: __init__.py  _metadata.py  _threading.py  agent.py  agentconversation.py  component.py  componentwithio.py  controlconnection.py  conversation.py  conversationalcomponent.py  dataconnection.py  exceptions.py  flow.py  flowbuilder.py  flowconversation.py  flowhelpers.py  idgeneration.py  managerworkers.py  messagelist.py  ociagent.py  outputparser.py  planning.py  property.py  retrypolicy.py  stepdescription.py  swarm.py  tokenusage.py  transforms.py  variable.py  warnings.py
wayflowcore/testing_scripts/: measure_managerworkers_swarm_flakiness.sh  rerun_incomplete_100201_managerworkers_swarm_flakiness.sh  run_flaky_analyzer.py  run_repl_from_serialized_graph.py
wayflowcore/testing_scripts/templates/: report_template.html
wayflowcore/tests/: conftest.py  run_tests.sh  test_agentexecutor.py  test_agentinagent.py  test_assistantevaluator.py  test_assistantexecutionstate.py  test_benchmark_managerworkers.py  test_benchmark_swarm.py  test_caller_input_mode.py  test_contextproviders.py  test_controlconnection.py  test_conversable_components.py  test_conversation.py  test_conversationevaluator.py  test_dataconnection.py  test_docs_examples.py  test_docstring.py  test_dummy_model.py  test_embeddingmodels.py  test_flowbuilder.py  test_graphscriptrunner.py  test_idgenerator.py  test_interrupts.py  test_managerworkers.py  test_ociagent.py  test_outputparsers.py  test_promptbenchmarker.py  test_runtime_defaults.py  test_step_methods_signatures.py  test_stream_message.py  test_swarm.py  test_template.py  test_templating_helpers.py  test_threading.py  test_transforms.py  test_version.py  utils.py
wayflowcore/tests/_utils/: faker.py  test_async.py  test_correctionhelpers.py  test_singleton.py  test_templating_helpers.py
wayflowcore/tests/a2a/: conftest.py  start_a2a_server.py  test_a2aagent.py  test_a2aserver.py
wayflowcore/tests/agentserver/: agent_registry.py  conftest.py  datastore_agent_server.py  hr_agent.json  multi_agent_server.py  simple_flow.json  test_server_access_defaults.py  test_wayflow_server.py
wayflowcore/tests/agentspec/: conftest.py  test_agent_with_toolbox.py  test_agent_with_transforms.py  test_agentspec_conversion_coverage.py  test_agentspec_to_core_conversion.py  test_catchexception_node.py  test_choice_node.py  test_core_to_agentspec_conversion.py  test_extended_agent.py  test_extended_agent_node.py  test_extended_input_message_node.py  test_extended_llm_node.py  test_extended_map_node.py  test_extended_node.py  test_extended_output_message_node.py  test_extended_parallel_flow_node.py  test_extended_parallel_map_node.py  test_flow_node.py  test_import_package.py  test_llmmodel.py  test_mapnode.py  test_mcptool.py  test_partial_serde.py  test_plugin_datastore_nodes.py  test_plugins.py  test_prompttemplate.py  test_read_write_variable_node.py  test_regexp_node.py  test_retry_policy_conversion.py  test_sensitive_fields.py  test_startnode.py  test_state_snapshot_tracing.py  test_state_snapshot_tracing_agent.py  test_state_snapshot_tracing_flow.py  test_state_snapshot_tracing_nested.py  (+3 more)
wayflowcore/tests_fuzz/: test_fuzz.py
(+2099 files in other folders)
