[metadata]
description_file = README.md

[flake8]

max_line_length = 100

# For list of codes see:
#   * https://flake8.pycqa.org/en/latest/user/error-codes.html
#   * https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
#   * https://www.pydocstyle.org/en/stable/error_codes.html#default-conventions
#   * https://pypi.org/project/pep8-naming/

# D1XX: Missing docstrings. Re-enable to uncover more problems.
# D200: One-line docstring should fit on one line with quotes. Re-enable to uncover more problems.
# D202: No blank lines allowed after function docstring. Ignored.
# D205: 1 blank line required between summary line and description.
#           Re-enable to uncover more problems.
# D209: Multi-line docstring closing quotes should be on a separate line. Ignored.
# D400: First line should end with a period. Re-enable to uncover more problems.
ignore = E121,E123,E126,E226,W503,W504,D1,D200,D202,D205,D209,D400


[tool:pytest]
markers =
    skip_guard_filewrites: marks tests where default fileguard should not be used
filterwarnings =
    # We decide to raise error for warnings in order to make sure that we address them or at least
    # consciously ignore them. If you write code that intentionally raises warnings, you can
    # capture that warnings are raised using `with pytest.warns(WarningClass):`. See pytest
    # documentation: https://docs.pytest.org/en/7.1.x/how-to/capture-warnings.html#warns
    error
    # Deprecation warning
    ignore: Usage of ``compartment_id`` is deprecated from 25.3, and will be removed in 25.5. Please pass this field to ``OCIGenAIModel`` instead.:DeprecationWarning
    ignore: Passing `compartment_id` to the client config is deprecated. Please pass the id to the `OCIGenAIModel` instead.:DeprecationWarning
    ignore:Use 'content=<...>' to upload raw bytes/text content.:DeprecationWarning
    ignore:`verify=<str>` is deprecated. Use `verify=ssl.create_default_context\(cafile=...\)` or `verify=ssl.create_default_context\(capath=...\)` instead.:DeprecationWarning
    ignore:Passing authentication config parameters individually \(e.g. service_endpoint, compartment_id, etc.\) to this class is deprecated. Please provide one of the subclasses of OCIClientConfig using the `client_config` argument instead.:DeprecationWarning
    # Future Warning
    ignore:The use of expert agents is currently in beta and may undergo significant changes. The API and behaviour are not guaranteed to be stable and may change in future versions.:FutureWarning
    # User Warning
    # oci genai models requires an explicit number of max_tokens
    ignore:Setting `max_tokens`:UserWarning
    # tests for interrupts
    ignore:The assistant is being executed without a time limit!:UserWarning
    ignore:Usage of non-encrypted requests to http urls is considered unsecure and strongly discouraged:UserWarning
    ignore:Flow should have a description but was empty:UserWarning
    ignore:Input with name:UserWarning
    ignore:Found additional values:UserWarning
    ignore:The WayFlow threadpool is already started:UserWarning
    ignore:datetime.datetime.utcnow.*is deprecated:DeprecationWarning
    ignore:Attribute .* is deprecated and will be removed in Python 3\.14:DeprecationWarning
    ignore:SSL verification is disabled. This is not recommended for production environments.:UserWarning
    ignore:Found no serialization plugin to serialize the object of type:UserWarning
    ignore:Found no deserialization plugin to deserialize the object of type:UserWarning
    # The following ignores are needed to run tests on python 3.14
    # This deprecation warning is thrown by the oci package (even in latest today's version 2.164.0)
    ignore:'asyncio\.iscoroutinefunction' is deprecated and slated for removal in Python 3\.16:DeprecationWarning

[mypy]
plugins = numpy.typing.mypy_plugin
